syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "parspiceTest";
option objc_class_prefix = "HLW";

package parspiceTest;

service ParSpice {
  // RPC functions for each spice call
  rpc ParFurnsh (FurnshBundle) returns (FurnshRep) {}
  rpc ParStr2Et (Str2EtBundle) returns (Str2EtRep) {}
  rpc ParSpkpos (SpkposBundle) returns (SpkposRep) {}
}

////////////////////////////////////////
/// Furnsh : <basic info about furnsh>
message FurnshBundle {
  repeated FurnshReq requests = 1;
}

message FurnshReq {
  string file = 1;
}

message FurnshRep {
  repeated double file = 1;
}

////////////////////////////////////////
/// Str2Et : : <basic info about furnsh>
message Str2EtBundle {
  repeated Str2EtReq requests = 1;
}

message Str2EtReq {
  string time = 1;
}

message Str2EtRep {
  repeated double time = 1;
}

////////////////////////////////////////
/// Spkpos
message SpkposBundle {
  repeated SpkposReq requests = 1;
}

message SpkposReq {
  string target = 1;
  double et = 2;
  string ref = 3;
  string abcorr = 4;
  string observer = 5;
  repeated double pos = 6;
  repeated double lt = 7;
}

message SpkposRep {
  repeated double time = 1;
}